<resources>
    <string name="app_name">Fridgely</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_shopping_list">Shopping List</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_trends">Trends</string>
    <string name="menu_settings">Settings</string>

    <string name="item_add">Add</string>

    <string name="universal_cancel">Cancel</string>
    <string name="universal_submit">Submit</string>
    
    <string name="payload_physicist">https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cillian-murphy-attends-the-free-fire-closing-night-gala-news-photo-615030208-1551909348.jpg</string>

    <string name="fetch_login">http://52.91.24.198:8080/fridgely/users/login</string>
    <string name="fetch_register">http://52.91.24.198:8080/fridgely/users</string>
    <string name="fetch_shoplist">http://52.91.24.198:8080/fridgely/shoppingList</string>
    <string name="submit_ratings">http://52.91.24.198:8080/fridgely/ratings/user/</string>
    
    <string name="breakfast_img">https://raw.githubusercontent.com/SEM-Fridgely/Fridgely-Android/master/app/src/main/res/drawable-hdpi/breakfast_bg.jpg</string>
    <string name="chinese_img">https://raw.githubusercontent.com/SEM-Fridgely/Fridgely-Android/master/app/src/main/res/drawable-hdpi/chinese_bg.png</string>
    <string name="indian_img">https://raw.githubusercontent.com/SEM-Fridgely/Fridgely-Android/master/app/src/main/res/drawable-hdpi/indian_bg.jpg</string>
    <string name="italian_img">https://raw.githubusercontent.com/SEM-Fridgely/Fridgely-Android/master/app/src/main/res/drawable-hdpi/italian_bg.jpg</string>
    <string name="korean_img">https://raw.githubusercontent.com/SEM-Fridgely/Fridgely-Android/master/app/src/main/res/drawable-hdpi/korean_bg.jpg</string>
    <string name="more_img">https://raw.githubusercontent.com/SEM-Fridgely/Fridgely-Android/master/app/src/main/res/drawable-hdpi/more_bg.jpg</string>
    
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
