<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_shoppinglist">

    <fragment
        android:id="@+id/nav_shoppinglist"
        android:name="cmu.sem.fridgely.ui.shoppinglist.ShoppinglistFragment"
        android:label="@string/menu_shopping_list"
        tools:layout="@layout/fragment_shoppinglist" />

    <fragment
        android:id="@+id/nav_recipes"
        android:name="cmu.sem.fridgely.ui.searecipes.SeaRecipeFragment"
        android:label="@string/menu_recipes"
        tools:layout="@layout/fragment_sea_recipe" />

    <fragment
        android:id="@+id/nav_trends"
        android:name="cmu.sem.fridgely.ui.trends.TrendsFragment"
        android:label="@string/menu_trends"
        tools:layout="@layout/fragment_trends" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="cmu.sem.fridgely.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>