<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shoppinglist"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_shopping_list" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_trends"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_trends" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="Settings" />
        <item
            android:id="@+id/nav_recipes_search"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Search for Recipe" />
    </group>

    <item android:title="Communicate">
        <menu>
<!--            <item-->
<!--                android:id="@+id/nav_trends"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
